added the nodemon dev dependency and a nodemon command to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A CRUD application using MongoDB and Express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/usman-tahir/express-mongodb-crud#readme",
   "dependencies": {
     "express": "^4.15.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
