added the mongodb dependency; set up a connection with the mLab database that was created

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/usman-tahir/express-mongodb-crud#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "mongodb": "^2.2.31"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
